Refactor Model to not use URL to point at resources anymore but instead a String that can be used via getClass().getResource(...) and adapted the codebase to that.
All MeshView loading functionality from HasFXGroupContentsContainer has been moved to HasFXGroupContents.

Modified pom.xml to allow creation of a .msi installer for windows.